# metorial-python

./: CHANGELOG.md  DEVELOPMENT.md  Makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
conda-recipe/: meta.yaml
examples/python-openai/: main.py
metorial-py/: .flake8  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
metorial-py/mcp/: __init__.py
metorial-py/mcp/anthropic/: __init__.py  metorial_anthropic.py
metorial-py/mcp/mcp_session/: __init__.py  mcp_client.py  mcp_session.py  mcp_tool.py  mcp_tool_manager.py
metorial-py/mcp/openai/: __init__.py  metorial_openai.py
metorial-py/metorial/: __init__.py  ai_sdk.py  anthropic.py  client.py  google.py  mistral.py  openai.py  openai_compatible.py  schema_utils.py  uri_template.py
scripts/: build-all.sh  install-dev.sh
